--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -36,7 +36,58 @@
         <!--基本信息-->
         <div id="tab1" class="weui-tab__bd-item weui-tab__bd-item--active default">
             <div class="date"></div>
-            <div class="loan"></div>
+            <div class="loan">
+                <div class="loan_list" id="0">
+                    <span>极速下款推荐</span>
+                    <ul>
+                        <li url="./index.php?i=135&amp;c=entry&amp;url=aHR0cDovL3luanIuZmFuemhvdXRlY2guY29tL21vYmlsZS9hcHBseWZvcm0%2FcGFyPTZEMUVFODlEODQxRUUzMDU1MEQ0MTREOTVCRjY2NUYz&amp;do=open&amp;m=fy_loan_page" platid="24" platname="海马钱包">
+                            <a href="javascript:;">
+                                <div class="loan_list_icon" style="background:url(http://chucun.mefuu.com/images/135/2018/03/MUf4zF5byoQ45QqQ5qYZtE14os5Qq8.jpg) no-repeat center;background-size:contain;"></div>
+                                <div class="loan_list_describe">
+                                    <span>海马钱包</span>
+                                    <span></span>
+                                </div>
+                            </a>
+                        </li>
+                        <li url="./index.php?i=135&amp;c=entry&amp;url=aHR0cDovL3luanIuZmFuemhvdXRlY2guY29tL21vYmlsZS9hcHBseWZvcm0%2FcGFyPTZEMUVFODlEODQxRUUzMDU1MEQ0MTREOTVCRjY2NUYz&amp;do=open&amp;m=fy_loan_page" platid="23" platname="现金广场">
+                            <a href="javascript:;">
+                                <div class="loan_list_icon" style="background:url(http://chucun.mefuu.com/images/135/2018/03/Q1XHH9H00ZBHbzdkZXhhY9ZhaZ1zIb.jpg) no-repeat center;background-size:contain;"></div>
+                                <div class="loan_list_describe">
+                                    <span>现金广场</span>
+                                    <span></span>
+                                </div>
+                            </a>
+                        </li>
+                        <li url="./index.php?i=135&amp;c=entry&amp;url=aHR0cDovL3luanIuZmFuemhvdXRlY2guY29tL21vYmlsZS9hcHBseWZvcm0%2FcGFyPTZEMUVFODlEODQxRUUzMDU1MEQ0MTREOTVCRjY2NUYz&amp;do=open&amp;m=fy_loan_page" platid="22" platname="壹号金服">
+                            <a href="javascript:;">
+                                <div class="loan_list_icon" style="background:url(http://chucun.mefuu.com/images/135/2018/03/LaqgzOykv4ZoyRNaOoa7nN2s5YVIg5.jpg) no-repeat center;background-size:contain;"></div>
+                                <div class="loan_list_describe">
+                                    <span>壹号金服</span>
+                                    <span></span>
+                                </div>
+                            </a>
+                        </li>
+                        <li url="./index.php?i=135&amp;c=entry&amp;url=aHR0cDovL3luanIuZmFuemhvdXRlY2guY29tL21vYmlsZS9hcHBseWZvcm0%2FcGFyPTZEMUVFODlEODQxRUUzMDU1MEQ0MTREOTVCRjY2NUYz&amp;do=open&amp;m=fy_loan_page" platid="14" platname="万融速贷">
+                            <a href="javascript:;">
+                                <div class="loan_list_icon" style="background:url(http://chucun.mefuu.com/images/135/2018/03/YtZ92i2t9507ttQ5WTbNs14b8Z4ts7.jpg) no-repeat center;background-size:contain;"></div>
+                                <div class="loan_list_describe">
+                                    <span>万融速贷</span>
+                                    <span>额度高</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li url="./index.php?i=135&amp;c=entry&amp;url=aHR0cDovL3luanIuZmFuemhvdXRlY2guY29tL21vYmlsZS9hcHBseWZvcm0%2FcGFyPTZEMUVFODlEODQxRUUzMDU1MEQ0MTREOTVCRjY2NUYz&amp;do=open&amp;m=fy_loan_page" platid="13" platname="海马钱包">
+                            <a href="javascript:;">
+                                <div class="loan_list_icon" style="background:url(http://chucun.mefuu.com/images/135/2018/03/dqbQ3WgQRUwRpuWRDqu3bQqqgrzm7g.png) no-repeat center;background-size:contain;"></div>
+                                <div class="loan_list_describe">
+                                    <span>海马钱包</span>
+                                    <span>芝麻分570以上</span>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div id="tab2" class="weui-tab__bd-item default">
             <div class="date"></div>
