--- a/application/admin/view/category/list.html
+++ b/application/admin/view/category/list.html
@@ -4,7 +4,7 @@
     <div class="row">
         {include file="public/menu"}
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h2 class="sub-header">类目管理
+            <h2 class="sub-header">类目管理 - {$app_module}
                 <div class="pull-right">
                     <a class="btn btn-default" href="{:url('category/update')}" role="button">添加</a>
                 </div>
