--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -4,7 +4,7 @@
     <div class="row">
         {include file="public/menu"}
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h2 class="sub-header">产品管理
+            <h2 class="sub-header">产品管理 - {$app_module}
                 <div class="pull-right">
                     <a class="btn btn-default" href="{:url('index/product')}" role="button">添加</a>
             </div>
@@ -41,5 +41,6 @@
         </div>
     </div>
 </div>
+{include file="public/footer"}
 </body>
 </html>
