--- a/application/admin/view/public/head.html
+++ b/application/admin/view/public/head.html
@@ -19,7 +19,8 @@
 
     <!-- Custom styles for this template -->
     <link href="__CSS__/dashboard.css" rel="stylesheet">
-
+    <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
