--- a/application/admin/view/public/menu.html
+++ b/application/admin/view/public/menu.html
@@ -19,6 +19,6 @@
     -->
 </div>
 <ul class="nav nav-tabs col-sm-offset-3 col-md-10 col-md-offset-2 main" id="topTab">
-    <li role="presentation"><a href="{:url($tab_url, ['module' => 'jddq'])}">借贷大全</a></li>
-    <li role="presentation"><a href="{:url($tab_url, ['module' => 'zzx'])}">周周新</a></li>
+    <li role="presentation"><a href="{:url($tab_url, ['module' => 'jddq'])}">热门产品</a></li>
+    <li role="presentation"><a href="{:url($tab_url, ['module' => 'zzx'])}">借贷大全</a></li>
 </ul>
