--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -27,8 +27,8 @@
     <div class="box">
         <div class="weui-navbar-box">
             <div class="weui-navbar" v="{$m}" id="m">
-                <a class="weui-navbar__item" href="{:url('index/index', ['module' => 'jddq'])}" id="tab_title1">借贷大全</a>
-                <a class="weui-navbar__item" href="{:url('index/index', ['module' => 'zzx'])}" id="tab_title2">周周新</a>
+                <a class="weui-navbar__item" href="{:url('index/index', ['module' => 'jddq'])}" id="tab_title1">热门产品</a>
+                <a class="weui-navbar__item" href="{:url('index/index', ['module' => 'zzx'])}" id="tab_title2">借贷大全</a>
             </div>
         </div>
     </div>
